# cargo-templates

./: README.md
solana-cli/: Cargo.toml  cargo-generate.toml
solana-cli/src/: main.rs  output.rs
